<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu_category"
            android:title="@string/menu_category" />

    </group>
    <group android:checkableBehavior="single">
        <item
            android:title="Profile">
                <item
                    android:id="@+id/nav_about_us"
                    android:icon="@drawable/ic_menu_about_us"
                    android:title="@string/menu_about_us" />
                <item
                    android:id="@+id/nav_contact_us"
                    android:icon="@drawable/ic_menu_contact_us"
                    android:title="@string/menu_contact_us" />
        </item>
    </group>
</menu>
