<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp">

        <View
            android:id="@+id/horizontal_divider_one"
            android:layout_width="98dp"
            android:layout_height="1dp"
            app:layout_constraintHorizontal_chainStyle="spread"
            android:background="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@id/about_us"
            app:layout_constraintBottom_toTopOf="@id/about_image"/>

        <TextView
            android:id="@+id/about_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="About Us"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="22dp"
            app:layout_constraintLeft_toRightOf="@id/horizontal_divider_one"
            app:layout_constraintRight_toLeftOf="@id/horizontal_divider_two" />

        <View
            android:id="@+id/horizontal_divider_two"
            android:layout_width="98dp"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            app:layout_constraintLeft_toRightOf="@id/about_us"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/about_image"/>

        <ImageView
            android:id="@+id/about_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/fast_food_image"
            app:layout_constraintTop_toBottomOf="@id/about_us" />

        <View
            android:id="@+id/horizontal_divider_three"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/about_image" />

        <TextView
            android:id="@+id/what_is_fast_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="What is Fast Food?"
            android:textColor="@color/colorPrimary"
            android:textSize="25dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/horizontal_divider_three" />

        <TextView
            android:id="@+id/what_is_fast_food_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_is_about_us_answer"
            android:textColor="@color/colorPrimary"
            android:justificationMode="inter_word"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/what_is_fast_food" />
        <View
            android:id="@+id/horizontal_divider_four"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/what_is_fast_food_answer" />

        <TextView
            android:id="@+id/how_do_we_deliver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="How Do We Deliver?"
            android:textColor="@color/colorPrimary"
            android:textSize="25dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/horizontal_divider_four" />

        <TextView
            android:id="@+id/how_do_we_deliver_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_do_we_deliver_answer"
            android:textColor="@color/colorPrimary"
            android:justificationMode="inter_word"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/how_do_we_deliver" />
        <View
            android:id="@+id/horizontal_divider_five"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/how_do_we_deliver_answer" />

        <TextView
            android:id="@+id/who_are_the_delivery_carriers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Who Are The Delivery Carriers?"
            android:textColor="@color/colorPrimary"
            android:textSize="25dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/horizontal_divider_five" />


        <TextView
            android:id="@+id/who_are_the_delivery_carriers_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_do_we_deliver_answer"
            android:textColor="@color/colorPrimary"
            android:justificationMode="inter_word"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/who_are_the_delivery_carriers" />
        <View
            android:id="@+id/horizontal_divider_six"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/who_are_the_delivery_carriers_answer" />

        <TextView
            android:id="@+id/our_values"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Our Values"
            android:textColor="@color/colorPrimary"
            android:textSize="25dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/horizontal_divider_six" />

        <TextView
            android:id="@+id/our_values_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/our_values_answer"
            android:textColor="@color/colorPrimary"
            android:justificationMode="inter_word"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/our_values" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/our_values_answer"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>